5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4500/executions/1679_1105.log
== TEST (2019-05-01 16:59:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
des = input("Digite o brasao: ")

print("Entrada:",des)
if(des == lobo):
	casa = "Stark"
elif(des == leao):
	casa = "Lannister"
elif(des == veado):
	casa = "Baratheon"
elif(des == dragao):
	casa = "Targaryen"
elif(des == rosa):
	casa = "Tyrell"
elif(des === sol):
	casa = "Martell"
elif(des == lula):
	casa = "Greyjoy"
elif(des == esfolado):
	casa = "Bolton"
elif(des == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
	
-- ERROR:
File "XXXX", line 16
    elif(des === sol):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:59:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
des = input("Digite o brasao: ")

print("Entrada:",des)
if(des == lobo):
	casa = "Stark"
elif(des == leao):
	casa = "Lannister"
elif(des == veado):
	casa = "Baratheon"
elif(des == dragao):
	casa = "Targaryen"
elif(des == rosa):
	casa = "Tyrell"
elif(des === sol):
	casa = "Martell"
elif(des == lula):
	casa = "Greyjoy"
elif(des == esfolado):
	casa = "Bolton"
elif(des == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
	
-- ERROR:
File "XXXX", line 16
    elif(des === sol):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:59:41) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
des = input("Digite o brasao: ")

print("Entrada:",des)
if(des == lobo):
	casa = "Stark"
elif(des == leao):
	casa = "Lannister"
elif(des == veado):
	casa = "Baratheon"
elif(des == dragao):
	casa = "Targaryen"
elif(des == rosa):
	casa = "Tyrell"
elif(des === sol):
	casa = "Martell"
elif(des == lula):
	casa = "Greyjoy"
elif(des == esfolado):
	casa = "Bolton"
elif(des == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
	
-- EXECUTION TIME:
0.1829
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 16
    elif(des === sol):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:01:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
des = input("Digite o brasao: ")

print("Entrada:",des)
if(des == lobo):
	casa = "Stark"
elif(des == leao):
	casa = "Lannister"
elif(des == veado):
	casa = "Baratheon"
elif(des == dragao):
	casa = "Targaryen"
elif(des == rosa):
	casa = "Tyrell"
elif(des === sol):
	casa = "Martell"
elif(des == lula):
	casa = "Greyjoy"
elif(des == esfolado):
	casa = "Bolton"
elif(des == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
	
-- EXECUTION TIME:
0.164582
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 16
    elif(des === sol):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:01:21) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
des = input("Digite o brasao: ")

print("Entrada:",des)
if(des == lobo):
	casa = "Stark"
elif(des == leao):
	casa = "Lannister"
elif(des == veado):
	casa = "Baratheon"
elif(des == dragao):
	casa = "Targaryen"
elif(des == rosa):
	casa = "Tyrell"
elif(des === sol):
	casa = "Martell"
elif(des == lula):
	casa = "Greyjoy"
elif(des == esfolado):
	casa = "Bolton"
elif(des == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
	
-- ERROR:
File "XXXX", line 16
    elif(des === sol):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:01:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
des = input("Digite o brasao: ")

print("Entrada:",des)
if(des == lobo):
	casa = "Stark"
elif(des == leao):
	casa = "Lannister"
elif(des == veado):
	casa = "Baratheon"
elif(des == dragao):
	casa = "Targaryen"
elif(des == rosa):
	casa = "Tyrell"
elif(des === sol):
	casa = "Martell"
elif(des == lula):
	casa = "Greyjoy"
elif(des == esfolado):
	casa = "Bolton"
elif(des == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
	
-- ERROR:
File "XXXX", line 16
    elif(des === sol):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:01:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
des = input("Digite o brasao: ")

print("Entrada:",des)
if(des == lobo):
	casa = "Stark"
elif(des == leao):
	casa = "Lannister"
elif(des == veado):
	casa = "Baratheon"
elif(des == dragao):
	casa = "Targaryen"
elif(des == rosa):
	casa = "Tyrell"
elif(des === sol):
	casa = "Martell"
elif(des == lula):
	casa = "Greyjoy"
elif(des == esfolado):
	casa = "Bolton"
elif(des == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
	
-- EXECUTION TIME:
0.143768
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 16
    elif(des === sol):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:01:23) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
des = input("Digite o brasao: ")

print("Entrada:",des)
if(des == lobo):
	casa = "Stark"
elif(des == leao):
	casa = "Lannister"
elif(des == veado):
	casa = "Baratheon"
elif(des == dragao):
	casa = "Targaryen"
elif(des == rosa):
	casa = "Tyrell"
elif(des === sol):
	casa = "Martell"
elif(des == lula):
	casa = "Greyjoy"
elif(des == esfolado):
	casa = "Bolton"
elif(des == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
	
-- EXECUTION TIME:
0.194507
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 16
    elif(des === sol):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:04:42) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
des = input("Digite o brasao: ")

print("Entrada:",des)
if(des == lobo):
	casa = "Stark"
elif(des == leao):
	casa = "Lannister"
elif(des == veado):
	casa = "Baratheon"
elif(des == dragao):
	casa = "Targaryen"
elif(des == rosa):
	casa = "Tyrell"
elif(des === sol):
	casa = "Martell"
elif(des == lula):
	casa = "Greyjoy"
elif(des == esfolado):
	casa = "Bolton"
elif(des == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
	
-- ERROR:
File "XXXX", line 16
    elif(des === sol):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:08:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
des = input("Digite o nome da casa: ")

print("Entrada:",des)
if(des == lobo):
	casa = "Stark"
elif(des == leao):
	casa = "Lannister"
elif(des == veado):
	casa = "Baratheon"
elif(des == dragao):
	casa = "Targaryen"
elif(des == rosa):
	casa = "Tyrell"
elif(des === sol):
	casa = "Martell"
elif(des == lula):
	casa = "Greyjoy"
elif(des == esfolado):
	casa = "Bolton"
elif(des == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
	
-- ERROR:
File "XXXX", line 16
    elif(des === sol):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:10:10) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
des = input("Digite o nome da casa: ")

print("Entrada:",des)
if(des == lobo):
	casa = "Stark"
elif(des == leao):
	casa = "Lannister"
elif(des == veado):
	casa = "Baratheon"
elif(des == dragao):
	casa = "Targaryen"
elif(des == rosa):
	casa = "Tyrell"
elif(des === sol):
	casa = "Martell"
elif(des == lula):
	casa = "Greyjoy"
elif(des == esfolado):
	casa = "Bolton"
elif(des == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
	
-- ERROR:
File "XXXX", line 16
    elif(des === sol):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:10:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
des = input("Digite o nome da casa: ")

print("Entrada:",des)
if(des == lobo):
	casa = "Stark"
elif(des == leao):
	casa = "Lannister"
elif(des == veado):
	casa = "Baratheon"
elif(des == dragao):
	casa = "Targaryen"
elif(des == rosa):
	casa = "Tyrell"
elif(des === sol):
	casa = "Martell"
elif(des == lula):
	casa = "Greyjoy"
elif(des == esfolado):
	casa = "Bolton"
elif(des == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
	
-- ERROR:
File "XXXX", line 16
    elif(des === sol):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:10:21) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
des = input("Digite o nome da casa: ")

print("Entrada:",des)
if(des == lobo):
	casa = "Stark"
elif(des == leao):
	casa = "Lannister"
elif(des == veado):
	casa = "Baratheon"
elif(des == dragao):
	casa = "Targaryen"
elif(des == rosa):
	casa = "Tyrell"
elif(des === sol):
	casa = "Martell"
elif(des == lula):
	casa = "Greyjoy"
elif(des == esfolado):
	casa = "Bolton"
elif(des == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
	
-- ERROR:
File "XXXX", line 16
    elif(des === sol):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:11:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
des = input("Digite o nome da casa: ")

print("Entrada:",des)
if(des == lobo):
	casa = "Stark"
elif(des == leao):
	casa = "Lannister"
elif(des == veado):
	casa = "Baratheon"
elif(des == dragao):
	casa = "Targaryen"
elif(des == rosa):
	casa = "Tyrell"
elif(des == sol):
	casa = "Martell"
elif(des == lula):
	casa = "Greyjoy"
elif(des == esfolado):
	casa = "Bolton"
elif(des == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(des == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:12:00) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
des = input("Digite o nome da casa: ")

print("Entrada:",des)
if(des == lobo):
	casa = "Stark"
elif(des == leao):
	casa = "Lannister"
elif(des == veado):
	casa = "Baratheon"
elif(des == dragao):
	casa = "Targaryen"
elif(des == rosa):
	casa = "Tyrell"
elif(des == sol):
	casa = "Martell"
elif(des == lula):
	casa = "Greyjoy"
elif(des == esfolado):
	casa = "Bolton"
elif(des == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
	
-- EXECUTION TIME:
0.160203
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1105/main.py", line 6, in <module>
    if(des == lobo):
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:12:09) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
des = input("Digite o nome da casa: ")

print("Entrada:",des)
if(des == lobo):
	casa = "Stark"
elif(des == leao):
	casa = "Lannister"
elif(des == veado):
	casa = "Baratheon"
elif(des == dragao):
	casa = "Targaryen"
elif(des == rosa):
	casa = "Tyrell"
elif(des == sol):
	casa = "Martell"
elif(des == lula):
	casa = "Greyjoy"
elif(des == esfolado):
	casa = "Bolton"
elif(des == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(des == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:15:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
des = input("Digite o nome da casa: ")

print("Entrada:",des)
if(des == lobo):
	casa = "Stark"
elif(des == leao):
	casa = "Lannister"
elif(des == veado):
	casa = "Baratheon"
elif(des == dragao):
	casa = "Targaryen"
elif(des == rosa):
	casa = "Tyrell"
elif(des == sol):
	casa = "Martell"
elif(des == lula):
	casa = "Greyjoy"
elif(des == esfolado):
	casa = "Bolton"
elif(des == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(des == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:16:31) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
des = input("Digite o nome da casa: ")

print("Entrada:", des)
if(des == lobo):
	casa = "Stark"
elif(des == leao):
	casa = "Lannister"
elif(des == veado):
	casa = "Baratheon"
elif(des == dragao):
	casa = "Targaryen"
elif(des == rosa):
	casa = "Tyrell"
elif(des == sol):
	casa = "Martell"
elif(des == lula):
	casa = "Greyjoy"
elif(des == esfolado):
	casa = "Bolton"
elif(des == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(des == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:18:20) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
des=input("Digite o nome da casa: ")

print("Entrada:", des)
if(des == lobo):
	casa = "Stark"
elif(des == leao):
	casa = "Lannister"
elif(des == veado):
	casa = "Baratheon"
elif(des == dragao):
	casa = "Targaryen"
elif(des == rosa):
	casa = "Tyrell"
elif(des == sol):
	casa = "Martell"
elif(des == lula):
	casa = "Greyjoy"
elif(des == esfolado):
	casa = "Bolton"
elif(des == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(des == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:20:38) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
var = input("Digite o nome da casa: ")

print("Entrada:", des)
if(var == lobo):
	casa = "Stark"
elif(var == leao):
	casa = "Lannister"
elif(var == veado):
	casa = "Baratheon"
elif(var == dragao):
	casa = "Targaryen"
elif(var == rosa):
	casa = "Tyrell"
elif(var == sol):
	casa = "Martell"
elif(var == lula):
	casa = "Greyjoy"
elif(var == esfolado):
	casa = "Bolton"
elif(var == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Entrada:", des)
NameError: name 'des' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:20:38) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
var = input("Digite o nome da casa: ")

print("Entrada:", des)
if(var == lobo):
	casa = "Stark"
elif(var == leao):
	casa = "Lannister"
elif(var == veado):
	casa = "Baratheon"
elif(var == dragao):
	casa = "Targaryen"
elif(var == rosa):
	casa = "Tyrell"
elif(var == sol):
	casa = "Martell"
elif(var == lula):
	casa = "Greyjoy"
elif(var == esfolado):
	casa = "Bolton"
elif(var == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Entrada:", des)
NameError: name 'des' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:20:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
var = input("Digite o nome da casa: ")

print("Entrada:", des)
if(var == lobo):
	casa = "Stark"
elif(var == leao):
	casa = "Lannister"
elif(var == veado):
	casa = "Baratheon"
elif(var == dragao):
	casa = "Targaryen"
elif(var == rosa):
	casa = "Tyrell"
elif(var == sol):
	casa = "Martell"
elif(var == lula):
	casa = "Greyjoy"
elif(var == esfolado):
	casa = "Bolton"
elif(var == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Entrada:", des)
NameError: name 'des' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:20:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
var = input("Digite o nome da casa: ")

print("Entrada:", des)
if(var == lobo):
	casa = "Stark"
elif(var == leao):
	casa = "Lannister"
elif(var == veado):
	casa = "Baratheon"
elif(var == dragao):
	casa = "Targaryen"
elif(var == rosa):
	casa = "Tyrell"
elif(var == sol):
	casa = "Martell"
elif(var == lula):
	casa = "Greyjoy"
elif(var == esfolado):
	casa = "Bolton"
elif(var == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Entrada:", des)
NameError: name 'des' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:20:53) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
var = input("Digite o nome da casa: ")

print("Entrada:", des)
if(var == lobo):
	casa = "Stark"
elif(var == leao):
	casa = "Lannister"
elif(var == veado):
	casa = "Baratheon"
elif(var == dragao):
	casa = "Targaryen"
elif(var == rosa):
	casa = "Tyrell"
elif(var == sol):
	casa = "Martell"
elif(var == lula):
	casa = "Greyjoy"
elif(var == esfolado):
	casa = "Bolton"
elif(var == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
-- EXECUTION TIME:
0.162458
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1105/main.py", line 5, in <module>
    print("Entrada:", des)
NameError: name 'des' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:35:10) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
var = input("Digite o nome da casa: ")

print("Entrada:", des)
if(var == lobo):
	casa = "Stark"
elif(var == leao):
	casa = "Lannister"
elif(var == veado):
	casa = "Baratheon"
elif(var == dragao):
	casa = "Targaryen"
elif(var == rosa):
	casa = "Tyrell"
elif(var == sol):
	casa = "Martell"
elif(var == lula):
	casa = "Greyjoy"
elif(var == esfolado):
	casa = "Bolton"
elif(var == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Entrada:", des)
NameError: name 'des' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:35:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
var = input("Digite o nome da casa: ")

print("Entrada:", var)
if(var == lobo):
	casa = "Stark"
elif(var == leao):
	casa = "Lannister"
elif(var == veado):
	casa = "Baratheon"
elif(var == dragao):
	casa = "Targaryen"
elif(var == rosa):
	casa = "Tyrell"
elif(var == sol):
	casa = "Martell"
elif(var == lula):
	casa = "Greyjoy"
elif(var == esfolado):
	casa = "Bolton"
elif(var == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(var == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:37:02) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
var = input("Digite o nome da casa: ")

print("Entrada:", var)
if(var == lobo):
	casa = "Stark"
elif(var == leao):
	casa = "Lannister"
elif(var == veado):
	casa = "Baratheon"
elif(var == dragao):
	casa = "Targaryen"
elif(var == rosa):
	casa = "Tyrell"
elif(var == sol):
	casa = "Martell"
elif(var == lula):
	casa = "Greyjoy"
elif(var == esfolado):
	casa = "Bolton"
elif(var == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(var == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:37:23) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
var = input("Digite o nome da casa: ")

print("Entrada:", var)
if(var == lobo):
	casa = "Stark"
elif(var == leao):
	casa = "Lannister"
elif(var == veado):
	casa = "Baratheon"
elif(var == dragao):
	casa = "Targaryen"
elif(var == rosa):
	casa = "Tyrell"
elif(var == sol):
	casa = "Martell"
elif(var == lula):
	casa = "Greyjoy"
elif(var == esfolado):
	casa = "Bolton"
elif(var == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(var == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:37:42) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
var = input("Digite o nome da casa: ")

print("Entrada:", var)
if(var = lobo):
	casa = "Stark"
elif(var == leao):
	casa = "Lannister"
elif(var == veado):
	casa = "Baratheon"
elif(var == dragao):
	casa = "Targaryen"
elif(var == rosa):
	casa = "Tyrell"
elif(var == sol):
	casa = "Martell"
elif(var == lula):
	casa = "Greyjoy"
elif(var == esfolado):
	casa = "Bolton"
elif(var == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
-- ERROR:
File "XXXX", line 6
    if(var = lobo):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:37:45) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
var = input("Digite o nome da casa: ")

print("Entrada:", var)
if(var = lobo):
	casa = "Stark"
elif(var == leao):
	casa = "Lannister"
elif(var == veado):
	casa = "Baratheon"
elif(var == dragao):
	casa = "Targaryen"
elif(var == rosa):
	casa = "Tyrell"
elif(var == sol):
	casa = "Martell"
elif(var == lula):
	casa = "Greyjoy"
elif(var == esfolado):
	casa = "Bolton"
elif(var == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
-- EXECUTION TIME:
0.195177
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 6
    if(var = lobo):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:45:51) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
var = input("Digite o nome da casa: ")

print("Entrada:", var)
if(var == lobo):
	casa = "Stark"
elif(var == leao):
	casa = "Lannister"
elif(var == veado):
	casa = "Baratheon"
elif(var == dragao):
	casa = "Targaryen"
elif(var == rosa):
	casa = "Tyrell"
elif(var == sol):
	casa = "Martell"
elif(var == lula):
	casa = "Greyjoy"
elif(var == esfolado):
	casa = "Bolton"
elif(var == turta):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Casa:",casa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(var == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:54:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
var = input("Digite o nome da casa: ")

print("Entrada:", var)
if(var == lobo):
	casa = "Stark"
elif(var == leao):
	casa = "Lannister"
elif(var == veado):
	casa = "Baratheon"
elif(var == dragao):
	casa = "Targaryen"
elif(var == rosa):
	casa = "Tyrell"
elif(var == sol):
	casa = "Martell"
elif(var == lula):
	casa = "Greyjoy"
elif(var == esfolado):
	casa = "Bolton"
elif(var == turta):
	casa = "Tully"
elif(var == "x")
	casa = "Brasao invalido"

print("Casa:",casa)
-- ERROR:
File "XXXX", line 24
    elif(var == "x")
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:54:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
var = input("Digite o nome da casa: ")

print("Entrada:", var)
if(var == lobo):
	casa = "Stark"
elif(var == leao):
	casa = "Lannister"
elif(var == veado):
	casa = "Baratheon"
elif(var == dragao):
	casa = "Targaryen"
elif(var == rosa):
	casa = "Tyrell"
elif(var == sol):
	casa = "Martell"
elif(var == lula):
	casa = "Greyjoy"
elif(var == esfolado):
	casa = "Bolton"
elif(var == turta):
	casa = "Tully"
elif(var == "x")
	casa = "Brasao invalido"

print("Casa:",casa)
-- EXECUTION TIME:
0.198087
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 24
    elif(var == "x")
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:54:44) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
var = input("Digite o nome da casa: ")

print("Entrada:", var)
if(var == lobo):
	casa = "Stark"
elif(var == leao):
	casa = "Lannister"
elif(var == veado):
	casa = "Baratheon"
elif(var == dragao):
	casa = "Targaryen"
elif(var == rosa):
	casa = "Tyrell"
elif(var == sol):
	casa = "Martell"
elif(var == lula):
	casa = "Greyjoy"
elif(var == esfolado):
	casa = "Bolton"
elif(var == turta):
	casa = "Tully"
elif(var == x)
	casa = "Brasao invalido"

print("Casa:",casa)
-- ERROR:
File "XXXX", line 24
    elif(var == x)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:54:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
var = input("Digite o nome da casa: ")

print("Entrada:", var)
if(var == lobo):
	casa = "Stark"
elif(var == leao):
	casa = "Lannister"
elif(var == veado):
	casa = "Baratheon"
elif(var == dragao):
	casa = "Targaryen"
elif(var == rosa):
	casa = "Tyrell"
elif(var == sol):
	casa = "Martell"
elif(var == lula):
	casa = "Greyjoy"
elif(var == esfolado):
	casa = "Bolton"
elif(var == turta):
	casa = "Tully"
elif(var == x)
	casa = "Brasao invalido"

print("Casa:",casa)
-- EXECUTION TIME:
0.207195
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 24
    elif(var == x)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:54:48) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
var = input("Digite o nome da casa: ")

print("Entrada:", var)
if(var == lobo):
	casa = "Stark"
elif(var == leao):
	casa = "Lannister"
elif(var == veado):
	casa = "Baratheon"
elif(var == dragao):
	casa = "Targaryen"
elif(var == rosa):
	casa = "Tyrell"
elif(var == sol):
	casa = "Martell"
elif(var == lula):
	casa = "Greyjoy"
elif(var == esfolado):
	casa = "Bolton"
elif(var == turta):
	casa = "Tully"
elif(var == x)
	casa = "Brasao invalido"

print("Casa:",casa)
-- ERROR:
File "XXXX", line 24
    elif(var == x)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:55:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
var = input("Digite o nome da casa: ")

print("Entrada:", var)
if(var == lobo):
	casa = "Stark"
elif(var == leao):
	casa = "Lannister"
elif(var == veado):
	casa = "Baratheon"
elif(var == dragao):
	casa = "Targaryen"
elif(var == rosa):
	casa = "Tyrell"
elif(var == sol):
	casa = "Martell"
elif(var == lula):
	casa = "Greyjoy"
elif(var == esfolado):
	casa = "Bolton"
elif(var == turta):
	casa = "Tully"
elif(var == "x")
	casa = "Brasao invalido"

print("Casa:",casa)
-- ERROR:
File "XXXX", line 24
    elif(var == "x")
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:55:37) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
var = input("Digite o nome da casa: ")

print("Entrada:", var)
if(var == lobo):
	casa = "Stark"
elif(var == leao):
	casa = "Lannister"
elif(var == veado):
	casa = "Baratheon"
elif(var == dragao):
	casa = "Targaryen"
elif(var == rosa):
	casa = "Tyrell"
elif(var == sol):
	casa = "Martell"
elif(var == lula):
	casa = "Greyjoy"
elif(var == esfolado):
	casa = "Bolton"
elif(var == turta):
	casa = "Tully"
elif(var == "X")
	casa = "Brasao invalido"

print("Casa:",casa)
-- ERROR:
File "XXXX", line 24
    elif(var == "X")
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:55:40) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
var = input("Digite o nome da casa: ")

print("Entrada:", var)
if(var == lobo):
	casa = "Stark"
elif(var == leao):
	casa = "Lannister"
elif(var == veado):
	casa = "Baratheon"
elif(var == dragao):
	casa = "Targaryen"
elif(var == rosa):
	casa = "Tyrell"
elif(var == sol):
	casa = "Martell"
elif(var == lula):
	casa = "Greyjoy"
elif(var == esfolado):
	casa = "Bolton"
elif(var == turta):
	casa = "Tully"
elif(var == "X")
	casa = "Brasao invalido"

print("Casa:",casa)
-- EXECUTION TIME:
0.153837
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 24
    elif(var == "X")
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
